@@ -101,8 +101,9 @@ if config.device.startswith('gpu') or config.init_gpu_device.startswith('gpu'):
 # We can't test the driver during import of theano.sandbox.cuda as
 # this cause circular import dependency. So we also test it manually
 # after the import
-    import theano.sandbox.cuda.tests.test_driver
-    theano.sandbox.cuda.tests.test_driver.test_nvidia_driver1()
+    if theano.sandbox.cuda.cuda_available:
+        import theano.sandbox.cuda.tests.test_driver
+        theano.sandbox.cuda.tests.test_driver.test_nvidia_driver1()
 
 # Use config.numpy to call numpy.seterr
 import numpy
